[project]
name = "ace-1.5-vibe-radio"
version = "0.1.0"
description = ""
requires-python = "==3.11.*"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    # ACE-Step 1.5 specific dependencies
    "torch==2.7.1; sys_platform == 'win32'",
    "torchvision==0.22.1; sys_platform == 'win32'", # Assuming matching vision version for torch 2.7.1, or let resolution find it if possible, but original didn't spec vision version?? Step 165 says "torchvision; ...". I will stick to "torchvision" to be safe.
    "torchaudio==2.7.1; sys_platform == 'win32'",
    "transformers>=4.51.0,<4.58.0",
    "diffusers",
    "gradio>=6.5.1",
    "matplotlib>=3.7.5",
    "scipy>=1.10.1",
    "soundfile>=0.13.1",
    "loguru>=0.7.3",
    "einops>=0.8.1",
    "accelerate>=1.12.0",
    "diskcache",
    "numba>=0.63.1",
    "vector-quantize-pytorch>=1.27.15",
    "torchcodec>=0.9.1; sys_platform != 'darwin'",
    "torchao",
    "peft>=0.7.0",
    "lightning>=2.0.0",
    "nano-vllm; sys_platform != 'darwin'",
    "modelscope"
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
nano-vllm = { path = "acestep/third_parts/nano-vllm" }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
