[project]
name = "ace-1.5-vibe-radio"
version = "0.1.0"
description = "Vibe radio wrapper around upstream ACE-Step"
requires-python = "==3.11.*"
dependencies = [
    "ace-step",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]

[tool.uv.sources]
ace-step = { path = "vendor/ace-step" }
