[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ace-1.5-vibe-radio"
version = "0.1.0"
description = "Vibe radio wrapper around upstream ACE-Step"
requires-python = "==3.11.*"
dependencies = [
    "ace-step",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
ace-radio = "app.cli:serve_main"
ace-radio-upstream = "app.cli:update_upstream_main"
ace-radio-download-all-models = "app.cli:download_all_models_main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
ace-step = { path = "vendor/ace-step" }
